--- a/Batch Scripts/Readme
+++ b/Batch Scripts/Readme
@@ -1,2 +1,2 @@
-The files contained in this folder are used to build only the booting x86 assembly part of the operating system using nasm.
+The files contained in this folder are used to build only the booting x86 assembly part of the operating system using nasm and run the kernel.
 They contain absolute directory paths and will not work on any computer without proper changes.
